docs: add documentation for show opening
