# handler/response.go
@@ -34,7 +34,17 @@ type CreateOpeningResponse struct {
 	Data    schemas.OpeningResponse `json:"data"`
 }
 
-type ListOpeningResponse struct {
+type DeleteOpeningResponse struct {
 	Message string                  `json:"message"`
-	Data    schemas.OpeningResponse `json:"[]data"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
+type ListOpeningResponse struct {
+	Message string                    `json:"message"`
+	Data    []schemas.OpeningResponse `json:"data"`
+}
+
+type ShowOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
 }
